--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>org.example</groupId>
     <artifactId>contact-manager-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -15,7 +27,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <!--Use this only when using Java 9+-->
-                    <release>15</release>
+                    <release>11</release>
                     <!--
                     Uncomment this and comment out <release> when using Java 8
                     <source>1.8</source>
